# trade-stgs

./: .gitignore  ANALYSIS.md  README.md  VOLATILITY_SYSTEM_V5_ANALYSIS.md  backtest_volatility_trend_analysis.sh  pyproject.toml
user_data/: config_backtest_futures.json  config_dryrun.json
user_data/data/gateio/futures/: ADA_USDT_USDT-1h-funding_rate.feather  ADA_USDT_USDT-1h-futures.feather  ADA_USDT_USDT-1h-mark.feather  ADA_USDT_USDT-5m-futures.feather  AVAX_USDT_USDT-1h-funding_rate.feather  AVAX_USDT_USDT-1h-futures.feather  AVAX_USDT_USDT-1h-mark.feather  AVAX_USDT_USDT-5m-futures.feather  BTC_USDT_USDT-1h-funding_rate.feather  BTC_USDT_USDT-1h-futures.feather  BTC_USDT_USDT-1h-mark.feather  BTC_USDT_USDT-5m-futures.feather  DOGE_USDT_USDT-1h-funding_rate.feather  DOGE_USDT_USDT-1h-futures.feather  DOGE_USDT_USDT-1h-mark.feather  DOGE_USDT_USDT-5m-futures.feather  DOT_USDT_USDT-1h-funding_rate.feather  DOT_USDT_USDT-1h-futures.feather  DOT_USDT_USDT-1h-mark.feather  DOT_USDT_USDT-5m-futures.feather  ETH_USDT_USDT-1h-funding_rate.feather  ETH_USDT_USDT-1h-futures.feather  ETH_USDT_USDT-1h-mark.feather  ETH_USDT_USDT-5m-futures.feather  LINK_USDT_USDT-1h-funding_rate.feather  LINK_USDT_USDT-1h-futures.feather  LINK_USDT_USDT-1h-mark.feather  LINK_USDT_USDT-5m-futures.feather  LTC_USDT_USDT-1h-funding_rate.feather  LTC_USDT_USDT-1h-futures.feather  LTC_USDT_USDT-1h-mark.feather  LTC_USDT_USDT-5m-futures.feather  (+8 more)
user_data/strategies/futures/: VolatilitySystemV13_Opt1.py  VolatilitySystemV5.py  VolatilitySystemV5_Opt2.py  VolatilitySystemV7_E.py
