[project]
name = "freqtrade-strategies"
version = "0.1.0"
description = "Free buy/sell strategies for Freqtrade"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
dependencies = [
    "freqtrade>=2026.1",
    "technical>=1.5.4",
    "TA-Lib>=0.6.8",
    "pandas-ta>=0.3.14b1",
    "ta>=0.11.0",
    "scipy>=1.11.0",
    "scikit-learn>=1.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []